Reorganizing the files / Solving bugs related to files paths / Refining the style.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Maze</title>
-    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./src/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./src/assets/css/reset.css">
+    <link rel="stylesheet" href="./src/assets/css/style.css">
 </head>
 <body>
     <header class="header">
@@ -16,9 +16,9 @@
         <p class="header__info-commands" id="headerCommands">Press Next</p>
     </header>
     <section id="generateSection" class="section">
-        <img src="./assets/images/spaceshipup.png" alt="spaceship" class="section__image" id="spaceship">
+        <img src="./src/assets/images/spaceshipup.png" alt="spaceship" class="section__image" id="spaceship">
         <button id="pressNext" class="section__button">NEXT ></button>
     </section>
-    <script src="script.js"></script>
+    <script src="./src/script.js"></script>
 </body>
 </html>
